--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <title>HTML und CSS</title>
+    <meta charset="UTF-8"
 </head>
-<div class="container">  
-  <div class="valentines">
-    <div class="envelope"></div>
-    <div class="front"></div>
-    <div class="card">
-    <div class="text">du stinkst</br>...</br>jk ily bro </div>
-    <div class="heart"</div>
-    </div>
-    <div class="hearts">
-      <div class="one"></div>
-      <div class="two"></div>
-      <div class="three"></div>
-      <div class="four"></div>
-      <div class="five"></div>
-    </div>
-  </div>
-  </div>
-  <div class="shadow"></div>
-  </div>
+<body>
+    <h1><p style="text-align: center">Die Basics zu HTML und CSS</p></h1>
+    <p>Das hier ist eine einfache Website, die HTML und CSS benutzt. Scroll weiter um mehr zu erfahren!
+        Wir fangen mit den Basics an, es gibt auf jeden Fall wichtige Tags, die ihr für euere Website braucht
+    </p>
+    
+<h2>Auflistung</h2>
+    <ul>
+        <li>Doctype html</li> <!--Nr 1--> 
+        <dd>gibt den Dokumenttyp HTML an</dd>
+        <li>head</li> <!--Nr 2-->
+        <dd>beeinhaltet alle Elemente/Informationen, die das Dokument beschreibt</dd>
+        <li>title</li> <!--Nr 3-->
+       <dd>definiert ein Titel für dein Dokument</dd>
+       <li>body</li> <!--Nr 4-->
+       <dd>Sichtbarer Hauptteil deiner Website</dd>
+    </ul>
+
+<p>In euer Body kommt alles rein, wie zum Beispiel: Bilder</p>
+    <h2>Bild</h2>
+    <center><img src="https://ih1.redbubble.net/image.2464906586.5278/flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="image.2464906586.5278/flat,750x,075,f-pad,750x1000,f8f8f8.jpg"></center>
+    <p>Man kann auch die Größe des Bildes anpassen oder sogar auch GIFs hinzufügen</p>
+    <h2>Angepasstes Bild und GIF</h2>
+    <img src="https://de.meming.world/images/de/thumb/1/13/Thumbs_Up_Crying_Cat.jpg/300px-Thumbs_Up_Crying_Cat.jpg" height="333px" width="333px" alt="300px-Thumbs_Up_Crying_Cat.jpg">
+    <img style="text-align: center"<img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZW05OGF4cWhkMzZlejE0ZXZ1MzBzZWV5a3R1eGc4Z2tzYXpwNXlvOSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/SvP3FgHsFVm7zwMdH6/giphy.gif" height="333px" width="333px" alt="gif image"></img>
