--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="Menü.html">Sieh Mehr...</a>
             </li>
             <li>
-                <span><a href="Menü.html"><img src="Chilli Cheese Fries.png" width="300px" height="300px"/></a></span>
+                <span><a href="Menü.html"><img src="/blob/main/Chilli%20Cheese%20Fries.png" width="300px" height="300px"/></a></span>
                 <p>Chilli Cheese Fries</p>
                 <a href="Menü.html">Sieh Mehr...</a>
             </li>
