--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="menü">
         <ul>
             <li>
-                <span><a href="Menü.html"><img src="Salami Pizza.png" width="300px" height="300px"/></a></span>
+                <span><a href="Menü.html"><img src="/blob/main/Salami%20Pizza.png" width="300px" height="300px"/></a></span>
                 <p>Salami Pizza</p>
                 <a href="Menü.html">Sieh Mehr...</a>
             </li>
