--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="Menü.html">Sieh Mehr...</a>
             </li>
             <li>
-                <span><a href="Menü.html"><img src="Burger.png" width="300px" height="300px"/></a></span>
+                <span><a href="Menü.html"><img src="/blob/main/Chilli%20Cheese%20Fries.png" width="300px" height="300px"/></a></span>
                 <p>Cheese Burger</p>
                 <a href="Menü.html">Sieh Mehr...</a>
             </li>
