--- a/Menü.html
+++ b/Menü.html
@@ -22,15 +22,15 @@
     </div>
 
     <h1>Menü</h1>
-    <table>
+    <table> 
 
         <tr>
-            <th>Beliebt</th>
-            <th>Preis</th>
+            <th>Beliebt</th> <!--Spalte 1 in Kopfzeile-->
+            <th>Preis</th> <!--Spalte 2 in Kopfzeile-->
         </tr>
         <tr class="beliebt">
-            <td>Salami Pizza</td>
-            <td>13€</td>
+            <td>Salami Pizza</td> <!--Spalte 1 in Zelle-->
+            <td>13€</td> <!--Spalte 2 in Zelle-->
         </tr>
         <tr class="beliebt">
             <td>Cheese Burger</td>
