--- a/kontakt.html
+++ b/kontakt.html
@@ -21,14 +21,15 @@
         <i><p style="color: rgb(220, 211, 198);"> Tauche ein in den Geschmack von Freiheit und Vielfalt – Bei Tasteful erlebst du die echte amerikanische Küche, wo jedes Gericht eine Hommage an Tradition und Innovation ist. Genieße unsere herzhaften Klassiker und entdecke neue kulinarische Abenteuer, die deine Geschmacksknospen tanzen lassen </p></i>
     </div>
 
-    <div class="flex-container">
+    <div class="flex-container"> <!--float klappt nicht?-->
         <div class="Anschrift">
             <h3 style="color: darkred;"> Anschrift</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1298.0470120826767!2d8.681741006919896!3d49.40712756642358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797c120eb1c5b4b%3A0x9c29fe371ca9935d!2sBluntschlistra%C3%9Fe%2011%2C%2069115%20Heidelberg!5e0!3m2!1sde!2sde!4v1717420466488!5m2!1sde!2sde" width="600" height="450" style="border: 4;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-        </div>
+        </div> <!--zeigt Ort auf Google Maps an-->
 
         <div class="Öffnungszeiten">
             <h3 style="color: darkred;"> Öffnungszeiten</h3>
+		
             <ul>
                 <li>Montag – 16:00 bis 23:00 Uhr</li>
                 <li>Dienstag - 14:00 bis 23:00 Uhr</li>
