--- a/index.html
+++ b/index.html
@@ -2,39 +2,38 @@
 <html lang="de">
 <head>
     <title>Tasteful</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
+    <nav class="navbar"> <!-- Navigationsleiste für meine Website, sollte grau sein-->
+        <ul> 
+            <li><a href="Home.html">Home</a></li>
             <li><a href="Menü.html">Menü</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
 
         </ul>
     </nav>
 
-    <div class="banner">
+    <div class="banner"> <!--soll Slogen beinhalten-->
         <h1 style="color: antiquewhite;"> Tasteful - Tasty & Delicious </h1>
         <i><p style="color: rgb(220, 211, 198);"> Tauche ein in den Geschmack von Freiheit und Vielfalt – Bei Tasteful erlebst du die echte amerikanische Küche, wo jedes Gericht eine Hommage an Tradition und Innovation ist. Genieße unsere herzhaften Klassiker und entdecke neue kulinarische Abenteuer, die deine Geschmacksknospen tanzen lassen </p></i>
     </div>
 
-    <div class="menü">
+    <div class="menü"> <!-- zeigt beliebteste Gerichte mit leichtem Übergang-->
         <ul>
             <li>
-                <span><a href="Menü.html"><img src="Salami Pizza.png" width="300px" height="300px"/></a></span>
+                <a href="Menü.html"><img src="Salami Pizza.png" width="300px" height="300px"/></a> <!--drauf clicken und leitet dich zum Menü--> 
                 <p>Salami Pizza</p>
                 <a href="Menü.html"></a>
             </li>
             <li>
-                <span><a href="Menü.html"><img src="Burger.png" width="300px" height="300px"/></a></span>
+                <a href="Menü.html"><img src="Burger.png" width="300px" height="300px"/></a>
                 <p>Cheese Burger</p>
                 <a href="Menü.html"></a>
             </li>
             <li>
-                <span><a href="Menü.html"><img src="Chilli Cheese Fries.png" width="300px" height="300px"/></a></span>
+                <a href="Menü.html"><img src="Chilli Cheese Fries.png" width="300px" height="300px"/></a>
                 <p>Chilli Cheese Fries</p>
                 <a href="Menü.html"></a>
             </li>
@@ -42,7 +41,7 @@
     </div>
 
     <div class="wichtig">
-        <h1 style="color: antiquewhite;">Beliebte Gerichte!</h1>
+        <h1 style="color: antiquewhite;">Beliebte Gerichte!</h1> 
     </div>
 
     <div class="reviews">
@@ -73,7 +72,7 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer"> <!--Fußzeile Website--> 
         <h5 style="color: antiquewhite;"> 06222 7372519 </h5>
         <h5 style="color: antiquewhite;"> tasteful@gmail.com </h5>
         <h5 style="color: antiquewhite;">  Bluntschlistraße 11, 69115 Heidelberg </h5>
