--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar"> <!-- Navigationsleiste für meine Website, sollte grau sein-->
         <ul> 
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Menü.html">Menü</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
 
