--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Menü.html">Menü</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
